--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ FetchContent_Declare(SFML
     SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp "src/include/config.h" "src/include/utils.h" "src/utils.cpp" "src/include/assetmanager.h" "src/assetmanager.cpp" "src/include/player.h" "src/player.cpp" "src/include/bullet.h" "src/bullet.cpp" "src/include/game.h" "src/game.cpp")
+add_executable(main src/main.cpp "src/include/config.h" "src/include/utils.h" "src/utils.cpp" "src/include/assetmanager.h" "src/assetmanager.cpp" "src/include/player.h" "src/player.cpp" "src/include/bullet.h" "src/bullet.cpp" "src/include/game.h" "src/game.cpp" "src/enemy.cpp" "src/include/enemy.h")
 include_directories(src/include)
 target_compile_features(main PRIVATE cxx_std_17)
 target_link_libraries(main PRIVATE SFML::Graphics)
